--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
-.container {
-    padding: 0.5rem 2rem 3rem
+
+
+@media (min-width: 870px) {
+    .container {
+        padding: 0 1rem 2rem
+    }
 }
