--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -2,36 +2,37 @@
 
 .blur {
   filter: blur(8px);
-//   opacity: 0.5;
+  //   opacity: 0.5;
+}
+.br_mobile {
+  display: none;
 }
 
-// .row {
-//   display: flex;
-// }
-
-.img_main {
-  background-image: url("../../assets/images/image-hero-mobile.png");
-  background-size: cover;
-  background-repeat:no-repeat;
-  padding-bottom: 100%;
+.col {
   width: 100%;
 }
-
-.main_text {
-  padding: 0.9rem;
+.img_main_mobile {
+  background-image: url("../../assets/images/image-hero-mobile.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 16em;
+}
+.image {
+  order: 1;
+}
+.text {
+  // margin-top: 2rem;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-
+  order: 2;
+  padding: 0.5rem;
 }
 .title {
   // text-align: center;
-  margin-top: 1rem;
+  margin-top: 2rem;
   @include font-epilogue-700;
-  font-size: 2rem;
+  font-size: 1.8rem;
   width: 100%;
-
 }
 p {
   @include font-epilogue-500;
@@ -52,7 +53,9 @@ p {
 }
 .list_partner {
   display: flex;
+  align-items: flex-end;
   justify-content: space-between;
+  height: 100%;
   .list_audio {
     width: 15%;
     height: 15%;
@@ -60,5 +63,62 @@ p {
   .list_img {
     width: 20%;
     height: 20%;
+  }
+}
+
+@media (min-width: 870px) {
+  .row {
+    display: flex;
+  }
+  .br_mobile {
+    display: block;
+  }
+  .container {
+    padding: 4rem 2rem 0 6rem;
+  }
+  .img_main_mobile {
+    background-image: url("../../assets/images/image-hero-desktop.png");
+    background-size: contain;
+    width: 100%;
+    height: 33rem;
+  }
+  .image {
+    order: 2;
+  }
+  .text {
+    order: 1;
+  }
+
+  .btn {
+    text-align: center;
+    margin: 0 0 2rem;
+    background-color: $Almost-Black;
+    color: $Almost-White;
+    padding: 0.9rem 0.3rem;
+    width: 25%;
+    font-size: 0.9rem;
+  }
+  .title {
+    font-size: 4rem;
+  }
+  .text {
+    text-align: left ;
+    p {
+      padding: 1rem 12rem 2.5rem 0;
+    }
+  }
+  .list_partner {
+    margin-top: 8.5rem;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    .list_audio {
+      width: auto;
+      height: auto;
+    }
+    .list_img {
+      width: auto;
+      height: auto;
+    }
   }
 }
