--- a/src/app/header/hamburger-menu/hamburger-menu.component.scss
+++ b/src/app/header/hamburger-menu/hamburger-menu.component.scss
@@ -19,7 +19,7 @@
   }
   .sidenav {
     height: 100%;
-    width: 269px;
+    // width: 269px;
     position: fixed;
     top: -5.4rem;
     z-index: 1;
@@ -63,6 +63,9 @@
             width: 100%;
           }
         }
+        .list_down:hover {
+          opacity: 50%;
+        }
       }
       &.login {
         margin-top: 1rem;
@@ -98,6 +101,7 @@
     &.active {
       right: 0;
       top: -5.4rem;
+      width: 65%;
     }
 
     .close {
