--- a/src/app/header/menu-desktop/menu-desktop.component.scss
+++ b/src/app/header/menu-desktop/menu-desktop.component.scss
@@ -59,6 +59,9 @@
         width: 100%;
       }
     }
+    .list_down:hover {
+      opacity: 60%;
+    }
       ul {
         display: flex;
         list-style-type: none;
